[tool.poetry]
name = "constructor"
version = "0.1.0"
description = ""
authors = ["kevortega <kevortega.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
